feat: add endpoints behavior and rekomendasi
